# Kore

./: .gitignore  development-progress.md
.qoder/repowiki/knowledge/zh/: _index.yaml
.qoder/repowiki/knowledge/zh/Kore AI 个人助手全栈平台/: _module.yaml  技术栈.md  架构设计.md  概述.md  特殊配置与命令.md  编码规范.md
.qoder/repowiki/knowledge/zh/Kore AI 代理运行时后端/: _module.yaml  技术栈.md  架构设计.md  概述.md  特殊配置与命令.md  编码规范.md
.qoder/repowiki/zh/content/: MCP 协议支持.md  内存管理系统.md  存储管理.md  开发者指南.md  快速开始.md  提示工程.md  测试框架.md  知识库系统.md  跟踪系统.md  部署和运维.md  问题求解器.md  项目概述.md
.qoder/repowiki/zh/content/API 接口文档/: API 接口文档.md  任务执行 API.md  智能体管理 API.md  状态监控 API.md  认证与授权.md  配置管理 API.md
.qoder/repowiki/zh/content/LLM 集成系统/: LLM 基础架构.md  LLM 集成系统.md  工厂模式实现.md  支持的模型类型.md  (+1 more)
.qoder/repowiki/zh/meta/: repowiki-metadata.json
backend/: .env.example  pyproject.toml
backend/kore/: cli.py  config.py  main.py
backend/kore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/kore/api/: chat.py  config.py  models.py  router.py  server.py
backend/kore/llm/: base.py  factory.py  openai_provider.py
backend/kore/prompting/: builder.py  templates.py
backend/kore/runtime/: agent_core.py  models.py
backend/kore/tools/: base.py  builtin_tools.py  decorator.py  executor.py  registry.py  sandbox.py
specs/: README.md  agent-runtime.md  api-surface.md  channel-interfaces.md  cli.md  knowledge-system.md  llm-config-and-switching.md  llm-system.md  memory-system.md  planner.md  prompt-system.md  react-loop.md  runtime-core.md  safety-and-policy.md  skills-system.md  tool-system.md
(+26 files in other folders)
