[project]
name = "kore"
version = "0.1.0"
description = "Kore - Personal AI Assistant & Agent Runtime"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "aiosqlite>=0.20.0",
    "chromadb>=0.5.0",
    "httpx>=0.28.0",
    "openai>=1.58.0",
    "anthropic>=0.42.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
